[project]
name = "kitetdx-mcp"
version = "0.1.3"
description = "MCP server for kitetdx - K-line and financial data access"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "kitetdx>=0.1.20",
    "fastapi",
    "uvicorn",
    "apscheduler",
    "pandas",
    "quickjs",
    "mootdx",
    "xlrd>=2.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
